--- a/packages/components/header/styles.module.css
+++ b/packages/components/header/styles.module.css
@@ -7,7 +7,7 @@
 
 .breadcrumb {
     color: #5B8DEF;
-    font-family: Poppins;
+    font-family: Poppins, sans-serif;
     font-size: 14px;
     font-style: normal;
     font-weight: 400;
