--- a/packages/components/Siderbar/menuSiderbar/MenuSiderbar.module.css
+++ b/packages/components/Siderbar/menuSiderbar/MenuSiderbar.module.css
@@ -1,7 +1,15 @@
 .menu :global(.ant-menu-item-selected) {
-    color: #FFF !important;
-    background: #2A3FFC !important;
+    color: #1A1D1F !important;
+    background: #EFEFEF !important;
+    box-shadow:
+            0 -2px 1px rgba(0, 0, 0, 0.05),
+            0 1px 1px rgba(0, 0, 0, 0.05);
+    display: flex;
+    font-family: 'Inter', sans-serif;
+    font-weight: 600; /* Semi-bold */
+    text-align: center;
 }
+
 
 .menuLogout :global(.ant-menu-title-content) {
     color: #D55F5A;
