--- a/packages/components/Siderbar/styles.module.css
+++ b/packages/components/Siderbar/styles.module.css
@@ -2,9 +2,15 @@
     border-radius: 11px;
     border-right: 1px solid #E2E8F0;
     height: 100vh !important;
+    transition: all 0.3s;
+    min-width: 100px !important;
 }
 
-.containerMenu {
+.collapsed {
+    min-width: 250px !important;
+}
+
+.containerMenu{
     display: flex;
     flex-direction: column;
     position: relative;
