--- a/packages/components/Siderbar/SiderbarHeader/styles.module.css
+++ b/packages/components/Siderbar/SiderbarHeader/styles.module.css
@@ -8,7 +8,15 @@
     display: flex;
     gap: 10px;
     align-items: center;
-    justify-content: center;
+    justify-content: left;
+}
+
+.collapsed {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    justify-content: center; 
+    transition: all 0.5s;
 }
 
 .info {
@@ -36,7 +44,7 @@
 
 .buttonMenu {
     position: absolute;
-    top: 30px;
+    top: 40px;
     right: -12px;
     z-index: 100;
 }
