--- a/packages/components/Siderbar/SiderbarHeader/styles.module.css
+++ b/packages/components/Siderbar/SiderbarHeader/styles.module.css
@@ -51,7 +51,7 @@
 
 .buttonMenu button {
     border-radius: 7.906px !important;
-    border: 0.988px solid #F6F6F6 !important;
+    border: 0.988px solid #E2E8F0 !important;
 }
 .buttonMenu button svg {
     transition: transform 0.5s ease;
