--- a/serverless/views/src/login.ejs
+++ b/serverless/views/src/login.ejs
@@ -85,7 +85,7 @@
             .then(data => {
                 if (data.accessToken) {
                     localStorage.setItem('jwt', data.accessToken);
-                    window.location.href = '/api/views/dashboard';
+                    window.location.href = '/api/admin/dashboard';
                 } else {
                     alert(data.message);
                 }
